# vivibin

./: Cargo.toml  LICENSE  README.md  TODO.md
src/: default_impls.rs  lib.rs  main.rs  util.rs
src/pointers/: mod.rs  pointer_nz32.rs  pointer_zero32.rs
vivibin_derive/: Cargo.toml
vivibin_derive/src/: lib.rs
