[package]
name = "vivibin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
array-init = "2.1.0"
byteorder = "1.5.0"
vivibin_derive = { path = "vivibin_derive" }

[lints.clippy]
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"

[workspace]
resolver = "2"
members = ["vivibin_derive"]
